add env in to postman file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 AWS_SECRET=476543876yrty98e5y6jfty546
 STRIPE_SECRET=80349vfdv364324ed23c43ffevfv194
 COGNITO_SECRET=vfdvdvegret433rgb53gv34
-
+POSTMAN_SECRET=wnf4u3bf493fg3bc4386
 PAYPAL_SECRET=v3rvefvr4gth54gh54rg4t
