--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ AWS_SECRET=476543876yrty98e5y6jfty546
 STRIPE_SECRET=80349vfdv364324ed23c43ffevfv194
 
 POSTMAN_SECRET=wnf4u3bf493fg3bc4386
+PAYPAL_SECRET=wnd2u03bfc203v43v4
