--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 
 PAYPA_SECRET=wkfnc30f
 AWS_SECRET=476543876yrty98e5y6jfty546
+AWS_SECRET=476543876yrty98e5y6jfty546
+STRIPE_SECRET=80349vfdv364324ed23c43ffevfv194
